# agent-smithers

./: README.md  pyproject.toml
src/agent_smithers/: env.py  main.py  printer.py  test.py  tools.py  try_it.py  workflow.py
src/agent_smithers/console/: __init__.py  chat.py
src/agent_smithers/github/: __init__.py  client.py
src/agent_smithers/latency_modelling/: celery_model.py  charts.py  example.py  simulation.py
src/agent_smithers/notion/: __init__.py  client.py
tests/: __init__.py  test_github.py  test_notion.py  test_tools.py
