[project]
name = "agent_smithers"
version = "0.1.0"
description = "An agent"
authors = ["Rian <you@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pydantic",
    "rich",
    "anthropic>=0.46.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
