[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[project]
name = "agent-smithers"
version = "0.1.0"
description = "A chat interface for Agent Smithers"
authors = [
    { name = "Agent Smithers Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "rich",
    "python-dotenv",
    "pydantic",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "notion-client>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_smithers"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
target-version = "py311"
show-fixes = true
lint.select = [
    "W",    # pycodestyle warnings
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",  # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    # "D",  # pydocstyle
    "D401",
    "ISC",  # flake8-implicit-str-concat
    "YTT",  # flake8-2020
    "DTZ",  # flake8-datetimez
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "INT",  # flake8-gettext
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
    "PGH",  # pygrep-hooks
    "NPY",  # NumPy-specific rules
    "TID",  # flake8-tidy-imports
    "PD",   # pandas-vet
    "PERF", # Perflint
    "PL",   # Pylint
    "UP",   # pyupgrade
    "A",    # flake8-builtins
    "FLY",  # flynt
    "G",    # flake8-logging-format
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "TD",   # flake8-todos
    "N",    # pep8-naming
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
